added media-query/ edit css

--- a/find.html
+++ b/find.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/find.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokoa Find</title>
@@ -10,7 +11,7 @@
     <div class="status-bar">
         <div class="status-bar__colum">
             <span>No Service</span>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-wifi fa-xs"></i>
         </div>
         <div class="status-bar__colum">
             <span>03:15</span>
@@ -68,15 +69,63 @@
             <i class="fas fa-chevron-right"></i>
         </span>
     </div>
-    <ul class="find-Box__openChats">
+    <ul class="find-box__openChats">
         <li class="list-openChats">
             <div class="openChat-info">
-                <span class="openChat-info__title"></span>
-                <span class="openChat-info__hashtage"></span>
+                <span class="openChat-info__title">
+                    BTS-ARMY
+                </span>
+                <span class="openChat-info__hashtage">
+                    #BTS#ARMY#FRIENDS
+                </span>
                 <span class="openChat-info__detail">
-                    <img src="" alt="">
+                    <img src="img/rabbit.png" style="width: 20px; height: 20px;" >
                     <span>802 members</span>
-                    <span>Active</span>
+                    <span class="info__detail-pink">Active</span>
+                </span>
+            </div>
+            <div class="openChat-img">
+                <img src="img/army.png" style="width: 80px; height: 80px;">
+                <div class="openChat-img__likeit">
+                    <i class="fas fa-heart fa-xs"></i>
+                    <span>324</span>
+                </div>
+            </div>
+        </li>
+        <li class="list-openChats">
+            <div class="openChat-info">
+                <span class="openChat-info__title">
+                    BTS-ARMY
+                </span>
+                <span class="openChat-info__hashtage">
+                    #BTS#ARMY#FRIENDS
+                </span>
+                <span class="openChat-info__detail">
+                    <img src="img/rabbit.png" style="width: 20px; height: 20px;" >
+                    <span>802 members</span>
+                    <span class="info__detail-pink">Active</span>
+                </span>
+            </div>
+            <div class="openChat-img">
+                <img src="img/army.png" style="width: 80px; height: 80px;">
+                <div class="openChat-img__likeit">
+                    <i class="fas fa-heart fa-xs"></i>
+                    <span>324</span>
+                </div>
+            </div>
+        </li>
+        <li class="list-openChats">
+            <div class="openChat-info">
+                <span class="openChat-info__title">
+                    BTS-ARMY
+                </span>
+                <span class="openChat-info__hashtage">
+                    #BTS#ARMY#FRIENDS
+                </span>
+                <span class="openChat-info__detail">
+                    <img src="img/rabbit.png" style="width: 20px; height: 20px;" >
+                    <span>802 members</span>
+                    <span class="info__detail-pink">Active</span>
                 </span>
             </div>
             <div class="openChat-img">
@@ -115,6 +164,10 @@
         </div>
     </footer>
 
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
