--- a/more.html
+++ b/more.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/more.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokoa More</title>
@@ -10,7 +11,7 @@
     <div class="status-bar">
         <div class="status-bar__colum">
             <span>No Service</span>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-wifi fa-xs"></i>
         </div>
         <div class="status-bar__colum">
             <span>03:15</span>
@@ -39,7 +40,7 @@
             <img class="user-info" src="img/coffee.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    mark joan
+                    Soozzineeee
                 </h3>
                 <h4 class="user-info__detail">
                     +82 703-851-4519
@@ -51,32 +52,29 @@
 
         <div class="find-box__tools">
             <div class="tools-items">
-                <i class="fas fa-qrcode fa-2x"></i>
-                <div class="tools-items__name">QR Code</div>
+                <i class="far fa-calendar-check fa-2x"></i>
+                <div class="tools-items__name">Calendar</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-address-book fa-2x"></i>
-                <div class="tools-items__name">Add by Contacts</div>
+                <i class="fas fa-archive fa-2x"></i>
+                <div class="tools-items__name">Talk Drive</div>
+                <div id="notification-drive"></div>
             </div>
             <div class="tools-items">
-                <i class="far fa-user-circle fa-2x"></i>
-                <div class="tools-items__name">Add by Id</div>
+                <i class="far fa-grimace fa-2x"></i>
+                <div class="tools-items__name">Emoticons</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-envelope fa-2x"></i>
-                <div class="tools-items__name">Invite</div>
+                <i class="fas fa-palette fa-2x"></i>
+                <div class="tools-items__name">Themes</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-address-book fa-2x"></i>
-                <div class="tools-items__name">Add by Contacts</div>
+                <i class="far fa-address-card fa-2x"></i>
+                <div class="tools-items__name">Account</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-user-circle fa-2x"></i>
-                <div class="tools-items__name">Add by Id</div>
-            </div>
-            <div class="tools-items">
-                <i class="far fa-envelope fa-2x"></i>
-                <div class="tools-items__name">Invite</div>
+                <i class="far fa-comments fa-2x"></i>
+                <div class="tools-items__name">Openchat</div>
             </div>
         </div>
 
@@ -86,16 +84,16 @@
 
         <div class="find-box__tools">
             <div class="tools-items">
-                <i class="fas fa-qrcode fa-2x"></i>
-                <div class="tools-items__name">QR Code</div>
+                <img class="tools-items__img" src="img/story.png" style="width: 40px; height: 40px;">
+                <div class="more__items-name">KoKoa Story</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-address-book fa-2x"></i>
-                <div class="tools-items__name">Add by Contacts</div>
+                <img class="tools-items__img" src="img/friends.png" style="width: 40px; height: 40px;">
+                <div class="more__items-name">Kokoa friends</div>
             </div>
             <div class="tools-items">
-                <i class="far fa-user-circle fa-2x"></i>
-                <div class="tools-items__name">Add by Id</div>
+                <img class="tools-items__img" src="img/game.png" style="width: 40px; height: 40px;">
+                <div class="more__items-name">Friends Game</div>
             </div>    
         </div>
 
@@ -124,6 +122,12 @@
             </a>
         </div>
     </footer>
+    
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
