--- a/room.html
+++ b/room.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/room.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokoa Room</title>
@@ -11,7 +12,7 @@
         <div class="status-bar">
             <div class="status-bar__colum">
                 <span>No Service</span>
-                <i class="fas fa-wifi"></i>
+                <i class="fas fa-wifi fa-xs"></i>
             </div>
             <div class="status-bar__colum">
                 <span>03:15</span>
@@ -53,6 +54,11 @@
         </ul>
 
 
+    </div>
+
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
     </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
