--- a/setting.html
+++ b/setting.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/setting.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokoa Setting</title>
@@ -10,7 +11,7 @@
     <div class="status-bar">
         <div class="status-bar__colum">
             <span>No Service</span>
-            <i class="fas fa-wifi"></i>
+            <i class="fas fa-wifi fa-xs"></i>
         </div>
         <div class="status-bar__colum">
             <span>03:15</span>
@@ -24,7 +25,7 @@
     </div>
     
     <nav class="nav-bar">
-        <a href="#">
+        <a href="kokoa.html">
             <i class="fas fa-chevron-left"></i>
         </a>
         <span class="nav-bar__title">Settings</span>
@@ -32,54 +33,94 @@
     </nav>
 
     <main class="setting-box">
-        <section>
-            <div>
-                <i></i>
-                Notices
-            </div>
-            <div>
-                <i></i>
-                Kokoa Lab
-            </div>
-            <div>
-                <i></i>
-                Version
-                <span>Latest Version</span>
-            </div>
-        </section>
-        <section>
-            <div>
-                <i></i>
-                Privacy
-            </div>
-            <div>
-                <i></i>
-                Notifications
-            </div>
-            <div>
-                <i></i>
-                friends
-            </div>
-            <div>
-                <i></i>
-                Chats
-            </div>
-            <div>
-                <i></i>
-                Display
-                <div></div>
-            </div>
-            <div>
-                <i></i>
-                Themes
-                <div></div>
-                <span>Default theme</span>
-            </div>
-            <div>
-                <i></i>
-                call
-            </div>
-        </section>
+        <ul class="setting-box__section">
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-bullhorn fa-lg"></i>
+                    <span>Notices</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-flask fa-lg"></i>
+                    <span>Kokoa Lab</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-exclamation-circle fa-lg"></i>
+                    <span>Version</span> 
+                </div>
+                <div class="setting__items-additional">
+                    Latest Version
+                </div>
+            </li>
+        </ul>
+        <ul class="setting-box__section">
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-unlock-alt fa-lg"></i>
+                    <span>Privacy</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="far fa-bell fa-lg"></i>
+                    <span>Notifications</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="far fa-user fa-lg"></i>
+                    <span>Friends</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="far fa-comment fa-lg"></i>
+                    <span>Chats</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-desktop fa-lg"></i>
+                    <span>Display</span>
+                    <div class="setting__items-noti">N</div> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-palette fa-lg"></i>
+                    <span>Themes</span>
+                    <div class="setting__items-noti">N</div>  
+                </div>
+                <div class="setting__items-additional">
+                    Default theme
+                </div>
+            </li>
+            <li class="setting__items">
+                <div class="setting__items-name">
+                    <i class="fas fa-phone-square-alt fa-lg"></i>
+                    <span>Call</span> 
+                </div>
+                <div class="setting__items-additional">
+                </div>
+            </li>
+        </ul>
     </main>
 
     <footer class="menu-bar">
@@ -107,6 +148,10 @@
         </div>
     </footer>
     
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
