--- a/chat.html
+++ b/chat.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/chat.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kokoa Chat</title>
@@ -151,6 +152,11 @@
             <div id="moreNotification"></div>
         </div>
     </footer>
+
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
