--- a/kokoa.html
+++ b/kokoa.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="css/kokoa.css">
+    <link rel="stylesheet" href="css/welcom.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome KokoaTalk</title>
@@ -37,7 +38,10 @@
         <button class="access-box__join">Sign Up</button>
         <a class="access-box__hyperlink" href="#"> Find Kokoa Account or Password</a>
     </main>
-
+    <div class="device__screen-size">
+        <img src="img/screen.png" style="width: 300px; height: 300px;">
+        <h1>··· Screen is too big ···</h1>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
