--- a/room.html
+++ b/room.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="chatting-room">
-        <div class="status-bar">
+        <div id="chatting-room__status" class="status-bar">
             <div class="status-bar__colum">
                 <span>No Service</span>
                 <i class="fas fa-wifi fa-xs"></i>
