--- a/chat.html
+++ b/chat.html
@@ -42,10 +42,10 @@
                 <img class="friend-info" src="img/p.png" alt="">
                 <div class="user-info">
                     <h3 class="user-info__name">
-                        mark joan
+                        Malja
                     </h3>
                     <h4 class="user-info__detail">
-                        please check My kokoa Accont info 
+                        Hey! I finally got it!
                     </h4>
                 </div>
                 <div class="user-info">
@@ -62,7 +62,7 @@
             <img class="friend-info" src="img/e.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    John Edmondson
+                    JeokSook
                 </h3>
             </div>
             <div class="user-info">
@@ -75,7 +75,7 @@
             <img class="friend-info" src="img/o.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    Jecci
+                    Jesoon
                 </h3>
             </div>
             <div class="user-info">
@@ -88,7 +88,7 @@
             <img class="friend-info" src="img/pl.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    Cici
+                    SoonJa
                 </h3>
                 <!-- <h4 class="user-info__detail">
                     please check My kokoa Accont info 
@@ -104,7 +104,7 @@
             <img class="friend-info" src="img/coffee.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    Suujene
+                    coffee
                 </h3>
             </div>
             <div class="user-info">
@@ -117,7 +117,7 @@
             <img class="friend-info" src="img/coffee.png" alt="">
             <div class="user-info">
                 <h3 class="user-info__name">
-                    Suujene
+                    JiSeok
                 </h3>
             </div>
             <div class="user-info">
