--- a/kokoa.html
+++ b/kokoa.html
@@ -38,6 +38,11 @@
         <button class="access-box__join">Sign Up</button>
         <a class="access-box__hyperlink" href="#"> Find Kokoa Account or Password</a>
     </main>
+
+    <div id="splashee">
+        <i class="fas fa-comment-alt"></i>
+    </div>
+    
     <div class="device__screen-size">
         <img src="img/screen.png" style="width: 300px; height: 300px;">
         <h1>··· Screen is too big ···</h1>
